--- a/pom.xml
+++ b/pom.xml
@@ -19,14 +19,22 @@
       <artifactId>postgresql</artifactId>
       <version>42.6.0</version>
     </dependency>
-
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>5.4.32.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.6.0</version>
+      </dependency>
       <dependency>
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
           <version>1.18.24</version>
           <scope>provided</scope>
       </dependency>
-
   </dependencies>
   <build>
     <finalName>hw_jdbc</finalName>
